dev ->1.9.8.4
 - Added the ability in alignment-to-text mode to output HTML (-f html), to start/end at offsets (-s/-e) in the alignments and
   to limit the number of alignment entries to output (-n).
1.9.8.3
 - Added a methylation_region format capable of averaging methylation rates for different cytosine contexts over
   arbitrarily defined regions.
 - Added a diploid genotype filter to use when calling genotypes in a diploid genome.
 - discover-sequence-variants format compare_groups: Write distinct fisher p-values for each comparison pair
 - Fix FDR mode output for TSV format. Make open --column-selection-filter work.
 - Fix bug that prevented methylation vcf output from writing any line.
1.9.8.2.1
 - Fix bug in GenotypesOutputFormat that caused GenotypesOutputFormat to throw an exception when processing some sites.
1.9.8.2
 - Make it possible to activate indel calling without recompilation. Mode discover-sequence-variants now accepts
   the boolean argument --call-indels true/false.
 - Preliminary support for calling indels with discover-sequence-variants.  Candidate indels are now written
   in the formats that use GenotypeOutputFormat (e.g., genotypes, compare_groups, allele_frequency).
   The method of Krawitz et al is used to determine the equivalent indel region for each possible candidate.
   After possible realignment, and filtering to remove possible errors, EIR are reported with their frequencies.
   Please be advised that the VCF spec(s) are rather vague and as a result often interpreted differently by different
   programmers. This is especially true of the parts of the specification(s) that describe how to report indels. As a
   result of this situation, you might run into problems when trying to loading indel containing VCF files generated
   with Goby into other tools.
 - vcf-subset: Add ability to exclude positions at which all samples match the reference.