@@ -1,4 +1,5 @@
-dev ->1.9.8.4
+dev >
+ - vcf methylation format: removed space in name of C and Cm group INFO fields.
  - Added the ability in alignment-to-text mode to output HTML (-f html), to start/end at offsets (-s/-e) in the alignments and
    to limit the number of alignment entries to output (-n).
 1.9.8.3
